--- a/GerarCasa/styles.css
+++ b/GerarCasa/styles.css
@@ -10,7 +10,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: anta;
 }
 
 .container {
@@ -78,6 +78,10 @@ input[type="password"], input[type="text"] {
 
 .NomeLogo {
     margin-top: 10px;
+}
+.NomeLogo h1{
+  font-family: anta;
+  
 }
 
 .links {
