--- a/Style.css
+++ b/Style.css
@@ -27,6 +27,10 @@
 
 .NomeLogo {
     margin-top: 10px;
+    
+}
+.NomeLogo h1{
+  font-family: anta;
 }
 
 .links {
@@ -45,6 +49,7 @@
     padding: 10px;
     transition: color 0.3s;
     text-decoration-color: #04BFBF;
+    font-family: anta;
 }
 
 .links a:hover {
